[metadata]
name = netbox-paloalto
version = attr: netbox_paloalto.VERSION
description = List firewall rules from your Palo Alto firewall
long_description = file: README.md
long_description_content_type = text/markdown
author = Martin Rødvand
author_email = martin@rodvand.net
url = https://github.com/rodvand/netbox-paloalto
license = Apache 2.0
license_file = LICENSE.txt
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: Django
    Framework :: Django :: 3.0
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    setuptools
    pandevice
